@@ -1,30 +1,29 @@
 
-/** These two directives match what we had on TinyMCE 4 **/
-body { 
+/** The default font size controls line-height, this has to be 11px to match previous versions
+ *  of TinyMCE or everyone's documents get taller. */
+.mce-content-body { 
     font-family: sans-serif; 
     font-size: 11px; 
 }
-
-td, th { 
-    font-family: sans-serif; 
-    font-size: 11px; 
-}
-
 
 @media print {
+    /** Make our visual page break invisible but still force a break during printing */
     .mce-pagebreak {
         display: block;
         width: 100%;
         height: 0px;
         background-image: none;
-        border: 0 !important;
+        border: 0;
         margin: 0;
         page-break-before: always; clear: both;
     }
-
-    .mce-item-table, .mce-item-table td {
-        border: 0 !important;
-    }
+    /** TinyMCE adds an outline to selected tables and img - these can be printed by accident */
+    .mce-content-body table, .mce-content-body img { outline: 0 !important; }
+    /** Resize handles can be printed if an img or table is selected during print */
+    .mce-resizehandle { display: none; }
+    /** Tables use the border attribute when users edit, the border CSS property
+     *  is used by the editor to add a dotted outline, which this will remove when printing */
+    .mce-item-table, .mce-item-table td { border: 0 !important; }
 }
 
 @media screen {
